# heimdall-sandbox

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  SANDBOX-PLAN.md  SPEC.md  cliff.toml  dist-workspace.toml  hk.pkl  mise.toml
.agents/: architecture-reviewer.md  opsx-change-apply.md  opsx-change-verify.md  opsx-implement.chain.md
.agents/commands/: rust-review-caveman.md  rust-review.md
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci.yml  publish-crates.yml  publish-npm.yml  release-cut.yml  release.yml
.mise/tasks/test/: _default  rust
.pi/: heimdall.json  settings.json
.pi/agents/: claim-verifier.md  codebase-analyzer.md  codebase-locator.md  planner.md  reviewer.md  worker.md
crates/heimdall-core/: Cargo.toml
crates/heimdall-core/src/: child.rs  environment.rs  error.rs  executor.rs  lib.rs  outcome.rs  request.rs  signal.rs
crates/heimdall-linux-sandbox/: Cargo.toml
crates/heimdall-linux-sandbox/src/: launcher.rs  lib.rs  plan.rs  policy.rs  virtual_files.rs
crates/heimdall-macos-sandbox/: Cargo.toml
crates/heimdall-macos-sandbox/src/: lib.rs  restricted_read_only_platform_defaults.sbpl  seatbelt_base_policy.sbpl  seatbelt_network_policy.sbpl
crates/heimdall-microvm-sandbox/: Cargo.toml
crates/heimdall-microvm-sandbox/src/: environment.rs  lib.rs  naming.rs  preflight.rs  request.rs
crates/heimdall-privacy-filter/: Cargo.toml
crates/heimdall-privacy-filter/src/: input.rs  lib.rs  model.rs  output.rs  redaction.rs  runtime.rs  session.rs  setup.rs  testutil.rs
crates/heimdall-process-hardening/: Cargo.toml
crates/heimdall-process-hardening/src/: lib.rs
crates/heimdall-sandbox/: Cargo.toml  build.rs
crates/heimdall-sandbox-policy/: Cargo.toml
crates/heimdall-sandbox-policy/src/: lib.rs
crates/heimdall-sandbox/src/: error.rs  lib.rs  main.rs  policy.rs
crates/heimdall-sandbox/src/commands/: cli_privacy_types.rs  exec.rs  inner_exec.rs  mod.rs  policy.rs  privacy_filter.rs  setup.rs
crates/heimdall-sandbox/tests/: exec.rs  privacy_filter.rs
docs/: registry-publishing.md
openspec/: config.yaml
openspec/changes/add-registry-publishing/: design.md  proposal.md  tasks.md
openspec/changes/add-registry-publishing/specs/release-automation/: spec.md
openspec/changes/archive/2026-05-04-add-sandbox-core-runtime/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-04-add-sandbox-core-runtime/specs/sandbox-core-runtime/: spec.md
openspec/changes/archive/2026-05-06-add-github-ci-publishing/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-06-add-github-ci-publishing/specs/release-automation/: spec.md
openspec/changes/archive/2026-05-06-add-linux-bubblewrap-sandbox/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-06-add-linux-bubblewrap-sandbox/specs/linux-bubblewrap-sandbox/: spec.md
openspec/changes/archive/2026-05-06-add-linux-bubblewrap-sandbox/specs/sandbox-core-runtime/: spec.md
openspec/changes/archive/2026-05-07-add-macos-ci-integration/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-07-add-macos-ci-integration/specs/release-automation/: spec.md
openspec/changes/archive/2026-05-07-add-macos-seatbelt-sandbox/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-07-add-macos-seatbelt-sandbox/specs/macos-seatbelt-sandbox/: spec.md
openspec/changes/archive/2026-05-07-add-macos-seatbelt-sandbox/specs/sandbox-core-runtime/: spec.md
openspec/changes/archive/2026-05-24-tolerate-non-existent-host-directories/: proposal.md  tasks.md
openspec/changes/archive/2026-05-24-tolerate-non-existent-host-directories/reviews/: design.md  specs.md  tasks.md
openspec/changes/tolerate-non-existent-host-directories/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/tolerate-non-existent-host-directories/reviews/: proposal.md
openspec/changes/tolerate-non-existent-host-directories/specs/linux-bubblewrap-sandbox/: spec.md
openspec/changes/tolerate-non-existent-host-directories/specs/macos-seatbelt-sandbox/: spec.md
openspec/changes/window-privacy-filter-overflow/: design.md  proposal.md  tasks.md
openspec/changes/window-privacy-filter-overflow/specs/privacy-filter-windowing/: spec.md
openspec/specs/linux-bubblewrap-sandbox/: spec.md
openspec/specs/macos-seatbelt-sandbox/: spec.md
openspec/specs/release-automation/: spec.md
openspec/specs/sandbox-core-runtime/: spec.md
scripts/: package-webgpu-dawn.sh  patch-homebrew-formula.rb  patch-homebrew-formula.sh  prepare-npm-packages.py  prepare-npm-packages.ts  publish-crates.sh  publish-npm-packages.sh  validate-cargo-packages.sh
thoughts/shared/designs/: 2026-05-09_15-45-19_onnx-privacy-filter-setup-runtime.md
thoughts/shared/plans/: 2026-05-10_21-09-04_onnx-privacy-filter-setup-runtime.md
thoughts/shared/research/: 2026-05-09_00-05-56_rust-onnx-privacy-filter-runtime.md
thoughts/shared/reviews/: 2026-05-07_add-macos-ci-integration_verification.md  2026-05-10_validation-onnx-privacy-filter.md  2026-05-11_validation-onnx-privacy-filter.md
thoughts/shared/solutions/: 2026-05-07_12-26-16_linux-ebpf-controlled-egress.md
