[workspace]
members = [
    "crates/heimdall-core",
    "crates/heimdall-linux-sandbox",
    "crates/heimdall-macos-sandbox",
    "crates/heimdall-process-hardening",
    "crates/heimdall-sandbox",
    "crates/heimdall-sandbox-policy",
]
resolver = "3"

[workspace.package]
edition = "2024"
homepage = "https://github.com/casualjim/heimdall-sandbox"
license = "MIT"
readme = "README.md"
repository = "https://github.com/casualjim/heimdall-sandbox"
version = "0.1.9"

[workspace.metadata.release]
allow-branch = ["main"]
pre-release-commit-message = "chore: release version {{version}}"
publish = false
sign-commit = false
sign-tag = false
tag-message = "chore: release version {{version}}"

[workspace.dependencies]
clap = { version = "4.5.51", features = ["derive"] }
heimdall-core = { version = "0.1.9", path = "crates/heimdall-core" }
heimdall-linux-sandbox = { version = "0.1.9", path = "crates/heimdall-linux-sandbox" }
heimdall-macos-sandbox = { version = "0.1.9", path = "crates/heimdall-macos-sandbox" }
heimdall-process-hardening = { version = "0.1.9", path = "crates/heimdall-process-hardening" }
heimdall-sandbox-policy = { version = "0.1.9", path = "crates/heimdall-sandbox-policy" }
ignore = "0.4.25"
libc = "0.2.177"
schemars = { version = "1.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shellexpand = "3.1.1"
signal-hook = "0.3.18"
thiserror = "2.0.17"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
