[package]
edition.workspace = true
name = "heimdall-core"
version.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
heimdall-linux-sandbox.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
heimdall-macos-sandbox.workspace = true

[dependencies]
heimdall-process-hardening.workspace = true
heimdall-sandbox-policy.workspace = true
libc.workspace = true
signal-hook.workspace = true
thiserror.workspace = true
