[package]
description = "Core Heimdall sandbox runtime orchestration and execution types."
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "heimdall-core"
readme.workspace = true
repository.workspace = true
version.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
heimdall-linux-sandbox.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
heimdall-macos-sandbox.workspace = true

[dependencies]
heimdall-process-hardening.workspace = true
heimdall-sandbox-policy.workspace = true
libc.workspace = true
signal-hook.workspace = true
thiserror.workspace = true
