[package]
description = "OpenAI privacy-filter setup, ONNX Runtime inference, and text redaction for Heimdall."
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "heimdall-privacy-filter"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
hf-hub.workspace = true
ndarray.workspace = true
ort.workspace = true
serde.workspace = true
serde_json.workspace = true
small_ctor.workspace = true
thiserror.workspace = true
tokenizers.workspace = true
