[package]
description = "Process sandbox runtime for Heimdall."
edition.workspace = true
homepage = "https://github.com/casualjim/heimdall"
license = "MIT"
name = "heimdall-sandbox"
repository = "https://github.com/casualjim/heimdall"
version.workspace = true

[dependencies]
clap.workspace = true
heimdall-core.workspace = true
heimdall-process-hardening.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
shellexpand.workspace = true
