[package]
description = "Process sandbox runtime for Heimdall."
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "heimdall-sandbox"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
clap.workspace = true
heimdall-core.workspace = true
heimdall-privacy-filter.workspace = true
heimdall-process-hardening.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
shellexpand.workspace = true
thiserror.workspace = true
